Project

General

Profile

Actions

Bug #45969

closed

crash on realm reload during shutdown

Added by Casey Bodley almost 4 years ago. Updated over 3 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Target version:
-
% Done:

0%

Source:
Q/A
Tags:
multisite
Backport:
nautilus octopus
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

if the realm is being reloaded when radosgw shutdown is signaled, shutdown can race with the realm reloader to destroy the rados store

2020-06-09 15:00:02.494328 7fb5ac812700 -1 received  signal: Terminated from  PID: 1 task name: /usr/lib/systemd/systemd --system --deserialize 15  UID: 0
2020-06-09 15:00:02.494357 7fb5e5e38000 -1 shutting down
*** Caught signal (Segmentation fault) **
in thread 7fb4a9c06700 thread_name:safe_timer
ceph version 12.2.12-115.el7cp (319165891df40a94b23bf1cb2843f098e59988b7) luminous (stable)
 1: (()+0x2da461) [0x55fb963e5461]
 2: (()+0xf630) [0x7fb5e49e5630]
 3: (RGWFrontendPauser::resume(RGWRados*)+0xac) [0x55fb9635ff9c]
 4: (RGWRealmReloader::reload()+0x894) [0x55fb964a27b4]
 5: (Context::complete(int)+0x9) [0x55fb9634e099]
 6: (SafeTimer::timer_thread()+0x104) [0x7fb5dbf9a1b4]
 7: (SafeTimerThread::entry()+0xd) [0x7fb5dbf9bbdd]
 8: (()+0x7ea5) [0x7fb5e49ddea5]
 9: (clone()+0x6d) [0x7fb5d8e778dd]
 2020-06-09 15:00:02.698837 7fb4a9c06700 -1 *** Caught signal (Segmentation fault) **

Related issues 2 (0 open2 closed)

Copied to rgw - Backport #46471: octopus: crash on realm reload during shutdownResolvedNathan CutlerActions
Copied to rgw - Backport #46472: nautilus: crash on realm reload during shutdownResolvedNathan CutlerActions
Actions #1

Updated by Casey Bodley almost 4 years ago

  • Status changed from New to Fix Under Review
  • Pull request ID set to 35525
Actions #2

Updated by J. Eric Ivancich almost 4 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #3

Updated by Nathan Cutler almost 4 years ago

  • Copied to Backport #46471: octopus: crash on realm reload during shutdown added
Actions #4

Updated by Nathan Cutler almost 4 years ago

  • Copied to Backport #46472: nautilus: crash on realm reload during shutdown added
Actions #5

Updated by Nathan Cutler over 3 years ago

  • Status changed from Pending Backport to Resolved

While running with --resolve-parent, the script "backport-create-issue" noticed that all backports of this issue are in status "Resolved" or "Rejected".

Actions

Also available in: Atom PDF