rgw: stop realm reloader before store shutdown

otherwise the two could race to destroy the store

Fixes: https://tracker.ceph.com/issues/45969

Signed-off-by: Casey Bodley <cbodley@redhat.com>